--- a/src/driver/pictureviewer/Makefile.am
+++ b/src/driver/pictureviewer/Makefile.am
@@ -19,4 +19,9 @@ libneutrino_pictureviewer_a_SOURCES = \
 	gif.cpp \
 	jpeg.cpp \
 	pictureviewer.cpp \
-	png.cpp bmp.cpp svg.cpp
+	png.cpp bmp.cpp
+
+if ENABLE_SVG
+libneutrino_pictureviewer_a_SOURCES += \
+	svg.cpp
+endif
