no ci @ dm800se, dm800se v2 and dm820

--- a/src/gui/Makefile.am
+++ b/src/gui/Makefile.am
@@ -172,8 +172,14 @@ libneutrino_gui2_a_SOURCES = \
 	motorcontrol.cpp
 
 if !BOXTYPE_SPARK
+if !BOXMODEL_DM800SE
+if !BOXMODEL_DM800SEV2
+if !BOXMODEL_DM820
 libneutrino_gui2_a_SOURCES += \
 	cam_menu.cpp
+endif
+endif
+endif
 endif
 
 if ENABLE_UPNP
