--- a/src/nhttpd/nhttpd.conf.in
+++ b/src/nhttpd/nhttpd.conf.in
@@ -3,7 +3,8 @@ Language.selected=English
 Tuxbox.LogosURL=@TARGET_ICONSDIR@/logo
 WebsiteMain.directory=@TARGET_PRIVATE_HTTPDDIR@
 WebsiteMain.port=80
-configfile.version=4
+WebsiteMain.host=0.0.0.0
+configfile.version=5
 mod_auth.authenticate=false
 mod_auth.no_auth_client=
 mod_auth.password=root
